[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinax-templates"
version = "3.0.1"
description = "semantic templates for pinax apps"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Pinax Team", email = "team@pinaxprojects.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=3.2",
    "django-bootstrap-form>=3.0.0",
]

[project.urls]
Homepage = "http://github.com/pinax/pinax-templates/"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
zip-safe = false
